Traefik/whoami/03-ingressRoute.yaml
# whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.workshop.local`)
      kind: Rule
      services:
        - name: whoami
          port: 80
